refactor: Replace .common.collect.ImmutableSet.of() by Set.of() if the returned type is immediately down-cast. Fixes #1353