@@ -23,7 +23,6 @@ import com.axelor.tools.code.JavaType;
 import com.axelor.tools.code.entity.model.BaseType;
 import com.axelor.tools.code.entity.model.Entity;
 import com.axelor.tools.code.entity.model.EnumType;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.LinkedHashMultimap;
 import com.google.common.collect.Multimap;
 import jakarta.xml.bind.JAXBException;
@@ -67,9 +66,9 @@ public class EntityGenerator {
   private final Multimap<String, EnumType> enums = LinkedHashMultimap.create();
 
   private static final Map<String, Entity> mergedEntities = new HashMap<>();
-  private static final Set<String> MODEL_FIELD_NAMES = ImmutableSet.of("archived");
+  private static final Set<String> MODEL_FIELD_NAMES = Set.of("archived");
   private static final Set<String> AUDITABLE_MODEL_FIELD_NAMES =
-      ImmutableSet.of("createdOn", "updatedOn", "createdBy", "updatedBy");
+      Set.of("createdOn", "updatedOn", "createdBy", "updatedBy");
 
   public EntityGenerator(File domainPath, File outputPath) {
     this(domainPath, outputPath, String -> String);
